--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,6 +118,34 @@
 }
 
 @font-face {
+  font-family: "Amiri";
+  src: url("/fonts/Amiri-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Amiri";
+  src: url("/fonts/Amiri-BoldItalic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Amiri";
+  src: url("/fonts/Amiri-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Amiri";
+  src: url("/fonts/Amiri-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
   font-family: "CerebriSans";
   src: url("/fonts/CerebriSans-Light.woff2") format("woff2");
   font-weight: 300;
@@ -163,7 +191,7 @@ body,
 }
 
 .font-serif {
-  font-family: serif;
+  font-family: "Amiri", serif;
 }
 
 @keyframes shimmer {
