--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,21 +4,22 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --primary: #fa472a;
-  --primary-foreground: #ffffff;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
-  --foreground: oklch(0 0 0);
+  --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --secondary: #4d2afa;
-  --secondary-foreground: white;
+  --primary: oklch(0.6553 0.2196 31.92);
+  --primary-foreground: oklch(0.985 0 0);
+  --secondary: oklch(0.4979 0.2774 276.95);
+  --secondary-foreground: oklch(0.9 0 276.95);
   --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.7 0 0);
+  --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
+  --success: oklch(0.7 0.2 150);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
@@ -36,22 +37,27 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --grade-s-start: oklch(69.41% 0.218 343.3);
+  --grade-s-end: oklch(65.77% 0.198 259.9);
+  --grade-a: oklch(62.65% 0.177 154.5);
+  --grade-b: oklch(73.5% 0.169 152.6);
+  --grade-c: oklch(80.52% 0.187 84.1);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: oklch(0 0 0);
-    --foreground: oklch(1 0 0);
-    --card: transparent;
+    --foreground: oklch(0.985 0 0);
+    --card: oklch(0 0 0);
     --card-foreground: oklch(0.985 0 0);
-    --popover: oklch(0.205 0 0);
+    --popover: oklch(0.269 0 0);
     --popover-foreground: oklch(0.985 0 0);
-    --muted: oklch(0.2 0 0);
-    --muted-foreground: oklch(0.8 0 0);
-    --accent: oklch(0.269 0 0);
+    --muted: oklch(0.269 0 0);
+    --muted-foreground: oklch(0.708 0 0);
+    --accent: oklch(0.371 0 0);
     --accent-foreground: oklch(0.985 0 0);
     --destructive: oklch(0.704 0.191 22.216);
-    --border: oklch(1 0 0 / 10%);
+    --border: oklch(1 0 0 / 20%);
     --input: oklch(1 0 0 / 15%);
     --ring: oklch(0.556 0 0);
     --chart-1: oklch(0.488 0.243 264.376);
@@ -66,15 +72,11 @@
     --sidebar-accent: oklch(0.269 0 0);
     --sidebar-accent-foreground: oklch(0.985 0 0);
     --sidebar-border: oklch(1 0 0 / 10%);
-    --sidebar-ring: oklch(0.556 0 0);
+    --sidebar-ring: oklch(0.439 0 0);
   }
 }
 
 @theme inline {
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -89,6 +91,7 @@
   --color-muted-foreground: var(--muted-foreground);
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
+  --color-success: var(--success);
   --color-destructive: var(--destructive);
   --color-border: var(--border);
   --color-input: var(--input);
@@ -106,6 +109,11 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-grade-s-start: var(--grade-s-start);
+  --color-grade-s-end: var(--grade-s-end);
+  --color-grade-a: var(--grade-a);
+  --color-grade-b: var(--grade-b);
+  --color-grade-c: var(--grade-c);
 }
 
 @layer base {
@@ -213,35 +221,35 @@ abbr {
 }
 
 .a {
-  @apply bg-green-600/50;
+  @apply bg-grade-a/80;
 }
 
 .b {
-  @apply bg-green-400/50;
+  @apply bg-grade-b/80;
 }
 
 .c {
-  @apply bg-red-400/50 dark:bg-yellow-400/50;
+  @apply bg-grade-c/80;
 }
 
 .s {
-  @apply bg-gradient-to-tr from-pink-500/60 to-blue-500/60;
+  @apply bg-gradient-to-tr from-grade-s-start/80 to-grade-s-end/80;
 }
 
 .a:hover {
-  @apply bg-green-600/80;
+  @apply bg-grade-a;
 }
 
 .b:hover {
-  @apply bg-green-400/80;
+  @apply bg-grade-b;
 }
 
 .c:hover {
-  @apply bg-red-400/80 dark:bg-yellow-400/80;
+  @apply bg-grade-c;
 }
 
 .s:hover {
-  @apply bg-gradient-to-tr from-pink-500/80 to-blue-500/80;
+  @apply bg-gradient-to-tr from-grade-s-start to-grade-s-end;
 }
 
 .thinking {
