--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -195,6 +195,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "Pricedown";
+  src: url("/fonts/pricedown.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 body,
 .font-sans {
   font-family: "CerebriSans", sans-serif;
@@ -202,6 +210,10 @@ body,
 
 .font-serif {
   font-family: "Amiri", serif;
+}
+
+.font-gta {
+  font-family: "Pricedown", sans-serif;
 }
 
 abbr {
